Customizations for classes
Made updates to match other library products

--- a/classes_custom_v1.css
+++ b/classes_custom_v1.css
@@ -6,38 +6,91 @@
  /* .class, #id */
 
 .topnav{
-	
+	display: block;
+	padding: 13px 12px;
+	background-color: rgb(232, 232, 232);
+	font-size: 14px;
+	line-height: 16px;
 }
-.hp_header{
-	
+.hp_header, #eventh1 {
+	display: block;
+	margin-top: 12px;
 }
-#sysname, #syshyphen, #systemtagline{
-	
+
+.hp_header h1, #eventh1{
+	font-size: 20px !important;
+	font-family: Montserrat, Helvetica, arial, sans-serif !important;
+}
+.sysname, .syshyphen, .systemtagline{
+	margin: 2px;
+}
+.systemtagline{
+	font-size: 100% !important;
+}
+
+.stitle{
+	background-image: none;	
+	background-color: rgb(232, 232, 232);
+	text-align: left;
+	padding: 10px 0px 4px 12px;
+	margin-bottom: 0px !important;
+	font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 #content{
-	
+	padding: 0px;
 }
 
 #contentleft, #contentcenter, #contentright{
-	
+	display: block;
+	float: left;
+	min-height: 100%;
+	width: 100%;
+	height: 100%;
+	}
+
+#contentleft, #contentcenter, #contentright {
+	margin-top: 8px;
+}
+		
+#contentleft {
+	margin-left: 10px;
+}
+
+#contentxwide{
+	background-image: none;
 }
 
 /* inside #content elements */
 
-#infobox, .roundbox outerbox{
+.headerbox h2{
+	color: #000 !important;
+	font: 14px Montserrat, Helvetica, arial, sans-serif !important;
+	display: block;
+	}
+
+.headerbox{
+	background-image: none !important;
+	background-color: #bbbbbb;
+	border-radius: 0px !important;
+	margin-bottom: 0px !important;
 	
 }
-
-.roundbox headerbox{
-	
+.outerbox{
+	background-color: #bbbbbb;
+	margin-right: 0px;
+	padding: 2px;
 }
 
-.roundbox innerbox{
-	
+#footer{
+	border-top: none !important;
+	width: 80%;
+	margin: 10px 10px 0px 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	text-align: left;
+	font: 12px "Helvetica Neue", Arial, Helvetica, sans-serif !important;
 }
-
-
 </style>
 
 
